gradle build completed

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,6 +23,15 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
+
+        enterprise {
+            // blah blah
+            matchingFallbacks = ['release']
+        }
+        debug {
+            // blah blah
+            matchingFallbacks = ['debug']
+        }
     }
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
