--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,7 +23,6 @@ jobs:
     needs: [lint]
     runs-on: ubuntu-latest
     steps:
-      
       - name: Checkout the code
         uses: actions/checkout@v2
 
@@ -36,8 +35,27 @@ jobs:
           name: unit_test_report
           path: app/build/reports/tests/testDebugUnitTest/
 
-  
+  instrumentation-test:
+    needs: [unit-test]
+    runs-on: macos-latest
+    steps:
+      - name: Checkout the code
+        uses: actions/checkout@v2
+
+      - name: Run espresso tests
+        uses: reactivecircus/android-emulator-runner@v2
+        with:
+          api-level: 29
+          script: ./gradlew connectedCheck
+
+      - name: Upload test report
+        uses: actions/upload-artifact@v2
+        with:
+          name: instrumentation_test_report
+          path: app/build/reports/androidTests/connected/
+
   static-code-analysis:
+    needs: [instrumentation-test]
     runs-on: ubuntu-latest
     steps:
       - name: Checkout the code
@@ -48,12 +66,12 @@ jobs:
         with:
           java-version: 11
 
-      - name: SonarCloud Scan
-        run: ./gradlew app:sonarqube -Dsonar.login=${{ secrets.SONAR_TOKEN }}
+    
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
   package:
+    needs: [static-code-analysis]
     name: Generate APK
     runs-on: ubuntu-latest
     steps:
